--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,14 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <%= render 'shared/navbar' %>
+      <p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
       <%= yield %>
-    </main>
   </body>
 </html>
