--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
         <div class="feature-icon">
           <%= image_tag "Icona1.png", alt: "logo Cavin", width:"60" %>
         </div>
-        <h3 class="feature-title">1. CRÉA | TUOI STOCCAGE</h3>
+        <h3 class="feature-title">1. Créez plusieurs stockages</h3>
         <p class="feature-description">Créez vos espaces de stockage personnalisés pour organiser votre cave à vin</p>
       </div>
 
@@ -28,7 +28,7 @@
         <div class="feature-icon">
           <%= image_tag "Icona2.png", alt: "logo Cavin", width:"60" %>
         </div>
-        <h3 class="feature-title">2. AJOUTEZ | VOS VINS</h3>
+        <h3 class="feature-title">2. Ajoutez Vos vins</h3>
         <p class="feature-description">Ajoutez vos bouteilles avec toutes leurs informations : nom, région, type et prix</p>
       </div>
 
@@ -36,20 +36,18 @@
         <div class="feature-icon">
           <%= image_tag "Icona3.png", alt: "logo Cavin", width:"60" %>
         </div>
-        <h3 class="feature-title">3. EXPLOREZ ET GÉREZ</h3>
+        <h3 class="feature-title">3. Explorez et Gérez</h3>
         <p class="feature-description">Recherchez facilement vos vins et suivez votre collection en temps réel</p>
       </div>
     </div>
   </section>
 
-  <section class="cta-section">
-    <div class="cta-content">
-      <div class="wine-glass-icon">
-        <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-          <path d="M8 2h8M9 2v6.5a4 4 0 0 0 6 3.5M12 17v5M8 22h8"></path>
-        </svg>
-      </div>
-      <p class="cta-text">Pour vos intérieurs : chaque bouteille a son histoire.</p>
+<section class="cta-section">
+  <div class="cta-content">
+    <div class="wine-glass-icon">
+      <%= image_tag "wine.png", alt: "Bicchiere di vino", class: "wine-glass-img" %>
     </div>
-  </section>
+    <p class="cta-text">Pour les vrais connaisseurs, chaque bouteille a une histoire.</p>
+  </div>
+</section>
 </div>
