--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
         <div class="feature-icon">
           <%= image_tag "Icona1.png", alt: "logo Cavin", width:"60" %>
         </div>
-        <h3 class="feature-title">1. Créez plusieurs stockages</h3>
+        <h3 class="feature-title">1. Créez vos stockages</h3>
         <p class="feature-description">Créez vos espaces de stockage personnalisés pour organiser votre cave à vin</p>
       </div>
 
@@ -28,7 +28,7 @@
         <div class="feature-icon">
           <%= image_tag "Icona2.png", alt: "logo Cavin", width:"60" %>
         </div>
-        <h3 class="feature-title">2. Ajoutez Vos vins</h3>
+        <h3 class="feature-title">2. Ajoutez vos vins</h3>
         <p class="feature-description">Ajoutez vos bouteilles avec toutes leurs informations : nom, région, type et prix</p>
       </div>
 
